# digicron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REFERENCES.md  build.sh  platformio.ini
firmware/: display.cpp  display.h  input.cpp  input.h  main.cpp  proc.cpp  proc.h
os/: font.asm  gfx.asm  input.asm  isr.asm  main.asm  mem.asm  mode.asm  structs.asm  tables.asm  time.asm  util.asm
os/modes/: clock.asm  stopw.asm  timer.asm
simulator/: index.html  script.js  style.css
